[tool.poetry]
name = "olrp-loggibud"
version = "0.1.0"
description = "Optimal location query for real-world urban deliveries scenarios"
authors = ["Iago Machado <iagomachadocs@gmail.com>", "Gabriela Surita <gsurita@loggi.com>", "Fillipe Goulart <fillipe.mendes@loggi.com>", "Juan Camilo <juan.camilo@loggi.com>"]
license = "MIT"
packages = [{include = "loggibud"}]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.19.2,<1.20.0"
requests = "^2.25.1"
dacite = "^1.6.0"
tqdm = "^4.60.0"
ortools = "9.0.*"
sklearn = "^0.0"
Shapely = "^1.7.1"
geopandas = "^0.9.0"
folium = "^0.12.1"
polyline = "^1.4.0"
lkh = "^1.0.4"
tsplib95 = "^0.7.1"
scikit-learn-extra = "^0.2.0"
distinctipy = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
mock = "^4.0.3"
ipdb = "^0.13.7"
flake8 = "^3.9.0"
black = "^21.4b0"
jupyter = "^1.0.0"
matplotlib = "^3.6.2"

[tool.black]
line-length = 79
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

